<resources>
    <string name="app_name">DREAMLIST</string>
    <string name="dreamlist">梦想清单</string>
    <string name="todayplan">今日计划</string>
    <string name="checkout">点评成绩</string>
    <string name="memory">回忆往昔</string>
    <string name="achievement">辉煌成就</string>
    <string name="encouragement">来点干货</string>
    <string name="login">登录</string>
    <string name="username">用户名</string>
    <string name="password">输入密码</string>
    <string name="passwordagain">确认密码</string>
    <string name="registered">注册</string>

    <string name="text_registered_successful">注册成功</string>
    <string name="text_registered_failure">注册失败:</string>

    <string name="text_tost_empty">输入框不能为空</string>

    <string name="text_two_input_not_consistent">两次输入的密码不一致</string>


    <string name="text_forget_password">忘记密码</string>


    <string name="text_keep_password">记住密码</string>
    <string name="text_now_login">正在登陆...</string>
    <string name="text_email">邮箱</string>

    <string name="text_setting">个人中心</string>
    <string name="text_editor_success">修改成功</string>
    <string name="text_editor_failure">修改失败</string>
    <string name="text_email_send_ok">邮箱已经发送至：</string>
    <string name="text_email_send_no">邮箱发送失败</string>
    <string name="reset_successfully">重置密码成功</string>
    <string name="reset_failed">重置密码失败</string>
    <string name="text_editor_password">修改密码</string>
    <string name="text_now_password">旧密码</string>
    <string name="text_new_password">新密码</string>
    <string name="text_password_again">再次输入密码</string>
    <string name="text_register_remind">注册成功需要前往邮箱验证，否则无法登录！</string>

    <string name="openString">菜单打开了</string>
    <string name="closeString">菜单关闭了</string>

    <string name="history">历史回眸</string>
    <string name="event">重大成果</string>

    <string name="text_boy">男</string>
    <string name="text_girl_f">女</string>
    <string name="text_nothing">这个人很懒，什么都没有留下！</string>
    <string name="no_set">您还没有设置</string>
</resources>
